# phys-lab-1

./: CMakeLists.txt
src/: main.cpp  testList.cpp  testList.h  utilityFuncs.hpp  window.cpp  window.h
